v1.2.0 - album art, song history, toast sizes, favorites export